静态资源配置

--- a/templates/about.html
+++ b/templates/about.html
@@ -193,7 +193,7 @@
 
 
                     <li class="sub-menu">
-                        <a href="Chairs.html" class="sf-with-ul">
+                        <a href="chairs.html" class="sf-with-ul">
                             <div>Chairs</div>
                         </a>
 
@@ -342,7 +342,7 @@
 
 
                     <li class="sub-menu">
-                        <a href="Chairs.html" class="sf-with-ul">
+                        <a href="chairs.html" class="sf-with-ul">
                             <div>Chairs</div>
                         </a>
 
