--- a/templates/conference.html
+++ b/templates/conference.html
@@ -118,7 +118,7 @@
 
 
                         <li class="sub-menu">
-                            <a href="Chairs.html" class="sf-with-ul">
+                            <a href="chairs.html" class="sf-with-ul">
                                 <div>Chairs</div>
                             </a>
 
@@ -241,7 +241,7 @@
 
 
                     <li class="sub-menu">
-                        <a href="Chairs.html" class="sf-with-ul">
+                        <a href="chairs.html" class="sf-with-ul">
                             <div>Chairs</div>
                         </a>
 
