readme文件内容更新

--- a/templates/chairs.html
+++ b/templates/chairs.html
@@ -122,7 +122,7 @@
                     </li>
 
                     <li class="sub-menu">
-                        <a href="conftimetable.html" class="sf-with-ul">
+                        <a href="conference.html" class="sf-with-ul">
                             <div>conferences</div>
                         </a>
 
@@ -131,7 +131,7 @@
 
 
                     <li class="sub-menu">
-                        <a href="Chairs.html" class="sf-with-ul">
+                        <a href="chairs.html" class="sf-with-ul">
                             <div>Chairs</div>
                         </a>
 
@@ -139,7 +139,7 @@
 
 
                     <li class="sub-menu" >
-                        <a href="aboutme.html" class="sf-with-ul">
+                        <a href="about.html" class="sf-with-ul">
                             <div>About Us</div>
                         </a>
 
@@ -254,7 +254,7 @@
                     </li>
 
                     <li class="sub-menu">
-                        <a href="conftimetable.html" class="sf-with-ul">
+                        <a href="conference.html" class="sf-with-ul">
                             <div>conferences</div>
                         </a>
 
@@ -263,7 +263,7 @@
 
 
                     <li class="sub-menu">
-                        <a href="Chairs.html" class="sf-with-ul">
+                        <a href="chairs.html" class="sf-with-ul">
                             <div>Chairs</div>
                         </a>
 
@@ -271,7 +271,7 @@
 
 
                     <li class="sub-menu" >
-                        <a href="aboutme.html" class="sf-with-ul">
+                        <a href="about.html" class="sf-with-ul">
                             <div>About Us</div>
                         </a>
 
