--- a/templates/figure.html
+++ b/templates/figure.html
@@ -177,7 +177,7 @@
                         </li>
 
                         <li class="sub-menu">
-                            <a href="conftimetable.html" class="sf-with-ul">
+                            <a href="conference.html" class="sf-with-ul">
                                 <div>conferences</div>
                             </a>
 
@@ -186,7 +186,7 @@
 
 
                         <li class="sub-menu">
-                            <a href="Chairs.html" class="sf-with-ul">
+                            <a href="chairs.html" class="sf-with-ul">
                                 <div>Chairs</div>
                             </a>
 
@@ -194,7 +194,7 @@
 
 
                         <li class="sub-menu" >
-                            <a href="aboutme.html" class="sf-with-ul">
+                            <a href="about.html" class="sf-with-ul">
                                 <div>About Us</div>
                             </a>
 
@@ -268,7 +268,7 @@
                     </li>
 
                     <li class="sub-menu">
-                        <a href="conftimetable.html" class="sf-with-ul">
+                        <a href="conference.html" class="sf-with-ul">
                             <div>conferences</div>
                         </a>
 
@@ -277,7 +277,7 @@
 
 
                     <li class="sub-menu">
-                        <a href="Chairs.html" class="sf-with-ul">
+                        <a href="chairs.html" class="sf-with-ul">
                             <div>Chairs</div>
                         </a>
 
@@ -285,7 +285,7 @@
 
 
                     <li class="sub-menu" >
-                        <a href="aboutme.html" class="sf-with-ul">
+                        <a href="about.html" class="sf-with-ul">
                             <div>About Us</div>
                         </a>
 
