--- a/templates/index.html
+++ b/templates/index.html
@@ -178,7 +178,7 @@
                             </li>
 
                             <li class="sub-menu">
-                                <a href="conftimetable.html" class="sf-with-ul">
+                                <a href="conference.html" class="sf-with-ul">
                                     <div>conferences</div>
                                 </a>
 
@@ -187,7 +187,7 @@
 
 
                             <li class="sub-menu">
-                                <a href="Chairs.html" class="sf-with-ul">
+                                <a href="chairs.html" class="sf-with-ul">
                                     <div>Chairs</div>
                                 </a>
 
@@ -195,7 +195,7 @@
 
 
                             <li class="sub-menu" >
-                                <a href="aboutme.html" class="sf-with-ul">
+                                <a href="about.html" class="sf-with-ul">
                                     <div>About Us</div>
                                 </a>
 
@@ -462,7 +462,7 @@
     <div class="conftimetable" id="faqs_part">
             <div class="container">
 
-                <a href="conftimetable.html"><h2 class="section-title">HDU Conference Time Table</h2></a>
+                <a href="conference.html"><h2 class="section-title">HDU Conference Time Table</h2></a>
                 <h4>We will always update the meeting time as above.</h4>
 
 
@@ -628,7 +628,7 @@
                         </li>
 
                         <li class="sub-menu">
-                            <a href="conftimetable.html" class="sf-with-ul">
+                            <a href="conference.html" class="sf-with-ul">
                                 <div>conferences</div>
                             </a>
 
@@ -637,7 +637,7 @@
 
 
                         <li class="sub-menu">
-                            <a href="Chairs.html" class="sf-with-ul">
+                            <a href="chairs.html" class="sf-with-ul">
                                 <div>Chairs</div>
                             </a>
 
@@ -645,7 +645,7 @@
 
 
                         <li class="sub-menu" >
-                            <a href="aboutme.html" class="sf-with-ul">
+                            <a href="about.html" class="sf-with-ul">
                                 <div>About Us</div>
                             </a>
 
