--- a/templates/about.html
+++ b/templates/about.html
@@ -184,7 +184,7 @@
                     </li>
 
                     <li class="sub-menu">
-                        <a href="conftimetable.html" class="sf-with-ul">
+                        <a href="conference.html" class="sf-with-ul">
                             <div>conferences</div>
                         </a>
 
@@ -201,7 +201,7 @@
 
 
                     <li class="sub-menu" >
-                        <a href="aboutme.html" class="sf-with-ul">
+                        <a href="about.html" class="sf-with-ul">
                             <div>About Us</div>
                         </a>
 
@@ -333,7 +333,7 @@
                     </li>
 
                     <li class="sub-menu">
-                        <a href="conftimetable.html" class="sf-with-ul">
+                        <a href="conference.html" class="sf-with-ul">
                             <div>conferences</div>
                         </a>
 
@@ -350,7 +350,7 @@
 
 
                     <li class="sub-menu" >
-                        <a href="aboutme.html" class="sf-with-ul">
+                        <a href="about.html" class="sf-with-ul">
                             <div>About Us</div>
                         </a>
 
