--- a/templates/conference.html
+++ b/templates/conference.html
@@ -109,7 +109,7 @@
                         </li>
 
                         <li class="sub-menu">
-                            <a href="conftimetable.html" class="sf-with-ul">
+                            <a href="conference.html" class="sf-with-ul">
                                 <div>conferences</div>
                             </a>
 
@@ -126,7 +126,7 @@
 
 
                         <li class="sub-menu" >
-                            <a href="aboutme.html" class="sf-with-ul">
+                            <a href="about.html" class="sf-with-ul">
                                 <div>About Us</div>
                             </a>
 
@@ -232,7 +232,7 @@
                     </li>
 
                     <li class="sub-menu">
-                        <a href="conftimetable.html" class="sf-with-ul">
+                        <a href="conference.html" class="sf-with-ul">
                             <div>conferences</div>
                         </a>
 
@@ -249,7 +249,7 @@
 
 
                     <li class="sub-menu" >
-                        <a href="aboutme.html" class="sf-with-ul">
+                        <a href="about.html" class="sf-with-ul">
                             <div>About Us</div>
                         </a>
 
