--- a/templates/index.html
+++ b/templates/index.html
@@ -6,15 +6,15 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <!-- Stylesheets
     ============================================= -->
-    <link rel="stylesheet" href="web_files/bootstrap.css" type="text/css">
-    <link rel="stylesheet" href="web_files/style.css" type="text/css">
-    <link rel="stylesheet" href="web_files/dark.css" type="text/css">
-    <link rel="stylesheet" href="web_files/font-icons.css" type="text/css">
-    <link rel="stylesheet" href="web_files/animate.css" type="text/css">
-    <link rel="stylesheet" href="web_files/magnific-popup.css" type="text/css">
+    <link rel="stylesheet" href="/stastic/css/bootstrap.css" type="text/css">
+    <link rel="stylesheet" href="/stastic/css/style.css" type="text/css">
+    <link rel="stylesheet" href="/stastic/css/dark.css" type="text/css">
+    <link rel="stylesheet" href="/stastic/css/font-icons.css" type="text/css">
+    <link rel="stylesheet" href="/stastic/css/animate.css" type="text/css">
+    <link rel="stylesheet" href="/stastic/css/magnific-popup.css" type="text/css">
 
-    <link rel="stylesheet" href="web_files/responsive.css" type="text/css">
-    <link rel="stylesheet" href="lecturerstable.css" type="text/css">
+    <link rel="stylesheet" href="/stastic/css/responsive.css" type="text/css">
+    <link rel="stylesheet" href="/stastic/css/lecturerstable.css" type="text/css">
 
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <!--[if lt IE 9]>
@@ -26,9 +26,9 @@
 
 
     <!--时间表的样式-->
-    <link href="Home_files/conftimetable.css" rel="stylesheet" type="text/css">
+    <link href="/stastic/css/conftimetable.css" rel="stylesheet" type="text/css">
     <!--时间表的动态位置移动-->
-    <link href="Home_files/conftimetable-responsive.css" rel="stylesheet" type="text/css" media="screen">
+    <link href="/stastic/css/conftimetable-responsive.css" rel="stylesheet" type="text/css" media="screen">
 
 
 
@@ -53,9 +53,9 @@
             }
         </style>
     </div>
-    <script async="" src="web_files/analytics.js"></script>
-    <script type="text/javascript" src="web_files/jquery.js"></script>
-    <script type="text/javascript" src="web_files/plugins.js"></script>
+    <script async="" src="/stastic/js/analytics.js"></script>
+    <script type="text/javascript" src="/stastic/js/jquery.js"></script>
+    <script type="text/javascript" src="/stastic/js/plugins.js"></script>
     <link rel="apple-touch-icon" sizes="72x72" href="http://www.kdd.org/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="http://www.kdd.org/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="http://www.kdd.org/favicon-16x16.png">
@@ -151,7 +151,7 @@
                     <!-- Logo
                     ============================================= -->
                     <div style="position: absolute;top:6px">
-                        <img src="images/hdu_ics_logo.png" alt="HDUlogo" style="height: 50px;">
+                        <img src="/stastic/images/hdu_ics_logo.png" alt="HDUlogo" style="height: 50px;">
 
                     </div>
                     <!-- #logo end -->
@@ -279,10 +279,10 @@
 
 
                 <div id="slider-arrow-left" style="opacity: 4.00589;">
-                    <img src="images/left_arrow.png" alt="">
+                    <img src="/stastic/web/images/left_arrow.png" alt="">
                 </div>
                 <div id="slider-arrow-right" style="opacity: 4.00589;">
-                    <img src="images/right_arrow.png" alt="">
+                    <img src="/stastic/web/images/right_arrow.png" alt="">
                 </div>
 
             </div>
@@ -398,7 +398,7 @@
                                 <h2>ZeFei Zhu (朱泽飞)</h2>
                             </div>
                             <div class="images"><a href="figurezhuzefei.html">
-                                <img src="images/zhuzefei.jpg" alt="" width="auto", height="240px"></a>
+                                <img src="/stastic/human/images/zhuzefei.jpg" alt="" width="auto", height="240px"></a>
                             </div>
                         </div>
                     </div>
@@ -408,7 +408,7 @@
                                 <h2>Ting Wu (吴铤)</h2>
                             </div>
                             <div class="images"><a href="figure.html">
-                                <img src="images/haipa.jpg" alt="" width="auto" height="240px"></a>
+                                <img src="/stastic/human/images/haipa.jpg" alt="" width="auto" height="240px"></a>
                             </div>
                         </div>
                     </div>
@@ -506,43 +506,6 @@
 
             </div>
         </div>
-
-
-
-
-
-
-    <!--<div class="lecturers">-->
-        <!--<div class="lecturersheader">-->
-            <!--<h3>Our conference will be taught by the best teacher</h3>-->
-        <!--</div>-->
-
-        <!--<section class="lecturerspic">-->
-            <!--<div class="information">-->
-                    <!--<div class="title">-->
-                        <!--<h2>WuTing(吴铤)</h2>-->
-                        <!--<p>Director of Secrecy College</p>-->
-                    <!--</div>-->
-                    <!--<div class="images">-->
-                        <!--<img src="images/haipa.jpg" alt="" >-->
-                    <!--</div>-->
-            <!--</div>-->
-            <!--<div class="word">-->
-                <!--<p>-->
-                    <!--Wu Jun, Professor, born in 1972, graduated from the Department of Mathematics, Zhejiang University in 1999, received a master's degree in science. He graduated from the School of Mathematics and Systems Science, Shandong University in 2002 with a Ph.D. in Science. The research direction is information security, cryptography theory and application. In teaching, she took on the teaching of discrete mathematics, computer security and confidentiality, computer graphics, and digital image processing. In scientific research, as a major participant, he participated in the research of the National 863 Program, the National Natural Science Foundation of China, the Weaponry and Equipment Pre-research Fund Project, and the Zhejiang Provincial Natural Science Fund Project. At present, he undertakes research on many topics such as the Zhejiang Provincial Natural Science Foundation Project and the Zhejiang Provincial Department of Education’s University Research Project. Has published more than twenty papers in domestic and foreign magazines such as computer research and development, communications journals, etc.-->
-                <!--</p>-->
-            <!--</div>-->
-
-        <!--</section>-->
-
-    <!--</div>-->
-
-
-
-
-
-
-
         <section id="lecturers">
             <div class="container">
                 <div class="row">
@@ -606,7 +569,7 @@
 
                     <div class="widget clearfix">
 
-                        <img src="images/hdu_ics_logo.png" alt="" class="footer-logo" style="float: left;width: 100%">
+                        <img src="/stastic/web/images/hdu_ics_logo.png" alt="" class="footer-logo" style="float: left;width: 100%">
 
                         <p style="position: relative;top:5px;left:25px">We will always update the meeting time as above.</p>
 
@@ -708,7 +671,7 @@
         <!-- #copyrights end -->
 
     </footer>
-    <script type="text/javascript" src="web_files/functions.js"></script>
+    <script type="text/javascript" src="/stastic/js/functions.js"></script>
 
 
 </body>
