--- a/templates/figure.html
+++ b/templates/figure.html
@@ -150,7 +150,7 @@
                 <!-- Logo
                 ============================================= -->
                 <div style="position: absolute;top:6px">
-                    <img src="/stastic/images/hdu_ics_logo.png" alt="HDUlogo" style="height: 50px;">
+                    <img src="/stastic/images/web/hdu_ics_logo.png" alt="HDUlogo" style="height: 50px;">
 
                 </div>
                 <!-- #logo end -->
@@ -227,7 +227,7 @@
             <br>
             <br>
             <div class="grid-item grid-item-sm-3">
-                <img src="images/haipa.jpg" alt="" class="img-responsive center-block">
+                <img src="/stastic/images/human/haipa.jpg" alt="" class="img-responsive center-block">
             </div>
             <div class="col-md-9">
                 <h3>Ting Wu（吴铤）</h3>
@@ -250,7 +250,7 @@
 
                 <div class="widget clearfix">
 
-                    <img src="/stastic/images/hdu_ics_logo.png" alt="" class="footer-logo" style="float: left;width: 100%">
+                    <img src="/stastic/images/web/hdu_ics_logo.png" alt="" class="footer-logo" style="float: left;width: 100%">
 
                     <p style="position: relative;top:5px;left:25px">We will always update the meeting time as above.</p>
                 </div>
