--- a/templates/index.html
+++ b/templates/index.html
@@ -151,7 +151,7 @@
                     <!-- Logo
                     ============================================= -->
                     <div style="position: absolute;top:6px">
-                        <img src="/stastic/images/hdu_ics_logo.png" alt="HDUlogo" style="height: 50px;">
+                        <img src="/stastic/images/web/hdu_ics_logo.png" alt="HDUlogo" style="height: 50px;">
 
                     </div>
                     <!-- #logo end -->
@@ -236,7 +236,7 @@
 
             <div class="swiper-container swiper-parent" style="cursor: -webkit-grab;">
                 <div class="swiper-wrapper" style="width: 9115.2px; height: 350px; transform: translate3d(-6076.8px, 0px, 0px); transition-duration: 0.3s;">
-                    <div class="swiper-slide swiper-slide-duplicate" style="background-image: url(images/hdubg_1.jpg); background-position: center top; background-color: rgb(0, 0, 0); width: 1519.2px; height: 350px;">
+                    <div class="swiper-slide swiper-slide-duplicate" style="background-image: url(/stastic/images/web/hdubg_1.jpg); background-position: center top; background-color: rgb(0, 0, 0); width: 1519.2px; height: 350px;">
                         <div class="container clearfix">
                             <div class="slider-caption" style="transform: translate(0px, -55.86px); opacity: 4.00589; top: 32px;">
                                 <h2 data-caption-animate="fadeInUp" style="color: #f0f0f0; margin-top: 10%; text-shadow: 1px 1px 2px black;" class="not-animated">HDU conference</h2>
@@ -254,7 +254,7 @@
                     </div>
 
 
-                    <div class="swiper-slide" style="background-image: url(images/hdubg_2.jpg); background-position: center center; background-color: rgb(0, 0, 0); width: 1519.2px; height: 350px;">
+                    <div class="swiper-slide" style="background-image: url(/stastic/images/web/hdubg_2.jpg); background-position: center center; background-color: rgb(0, 0, 0); width: 1519.2px; height: 350px;">
                         <div class="container clearfix">
                             <div class="slider-caption" style="transform: translate(0px, -55.86px); opacity: 4.00589; top: 20.5px;">
                                 <h2 data-caption-animate="fadeInUp" style="color: #f0f0f0; margin-top: 10%; text-shadow: 1px 1px 2px black;" class="not-animated">Internet of Things Security @HDU 2018</h2>
@@ -279,10 +279,10 @@
 
 
                 <div id="slider-arrow-left" style="opacity: 4.00589;">
-                    <img src="/stastic/web/images/left_arrow.png" alt="">
+                    <img src="/stastic/images/web/left_arrow.png" alt="">
                 </div>
                 <div id="slider-arrow-right" style="opacity: 4.00589;">
-                    <img src="/stastic/web/images/right_arrow.png" alt="">
+                    <img src="/stastic/images/web/right_arrow.png" alt="">
                 </div>
 
             </div>
@@ -359,33 +359,7 @@
                     $('#slide-number-total').html(swiperSlider.slides.length - 2);
                 });
             </script>
-
-
         </section>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
         <!-- Content
         ============================================= -->
         <section id="content">
@@ -398,7 +372,7 @@
                                 <h2>ZeFei Zhu (朱泽飞)</h2>
                             </div>
                             <div class="images"><a href="figurezhuzefei.html">
-                                <img src="/stastic/human/images/zhuzefei.jpg" alt="" width="auto", height="240px"></a>
+                                <img src="/stastic/images/human/zhuzefei.jpg" alt="" width="auto", height="240px"></a>
                             </div>
                         </div>
                     </div>
@@ -408,7 +382,7 @@
                                 <h2>Ting Wu (吴铤)</h2>
                             </div>
                             <div class="images"><a href="figure.html">
-                                <img src="/stastic/human/images/haipa.jpg" alt="" width="auto" height="240px"></a>
+                                <img src="/stastic/images/human/haipa.jpg" alt="" width="auto" height="240px"></a>
                             </div>
                         </div>
                     </div>
@@ -454,25 +428,17 @@
             </div>
     </div>
     </section>
-
-
-
-
     <!--会议时间图表-->
     <div class="conftimetable" id="faqs_part">
             <div class="container">
-
                 <a href="conference.html"><h2 class="section-title">HDU Conference Time Table</h2></a>
                 <h4>We will always update the meeting time as above.</h4>
-
-
                 <div class="faqbox">
                     <div class="title">Machine Learning Discussion</div>
                     <p>
                         <strong>Time</strong>: April 31 09:00am / <strong>location</strong>: Hangzhou Science and Technology Museum / <strong>chair</strong>: ZeFei Zhu
                     </p>
                 </div>
-
                 <div class="faqbox longer">
                     <div class="title">Machine Learning Discussion</div>
                     <p>
@@ -569,7 +535,7 @@
 
                     <div class="widget clearfix">
 
-                        <img src="/stastic/web/images/hdu_ics_logo.png" alt="" class="footer-logo" style="float: left;width: 100%">
+                        <img src="/stastic/images/web/hdu_ics_logo.png" alt="" class="footer-logo" style="float: left;width: 100%">
 
                         <p style="position: relative;top:5px;left:25px">We will always update the meeting time as above.</p>
 
@@ -632,17 +598,6 @@
         </div>
 
         <!-- .footer-widgets-wrap end -->
-
-
-
-
-
-
-
-
-
-
-
 
         <!-- Copyrights
             ============================================= -->
