--- a/templates/conference.html
+++ b/templates/conference.html
@@ -5,15 +5,15 @@
 
     <!-- Stylesheets
     ============================================= -->
-    <link rel="stylesheet" href="web_files/bootstrap.css" type="text/css">
-    <link rel="stylesheet" href="web_files/style.css" type="text/css">
-    <link rel="stylesheet" href="web_files/dark.css" type="text/css">
-    <link rel="stylesheet" href="web_files/font-icons.css" type="text/css">
-    <link rel="stylesheet" href="web_files/animate.css" type="text/css">
-    <link rel="stylesheet" href="web_files/magnific-popup.css" type="text/css">
+    <link rel="stylesheet" href="/stastic/css/bootstrap.css" type="text/css">
+    <link rel="stylesheet" href="/stastic/css/style.css" type="text/css">
+    <link rel="stylesheet" href="/stastic/css/dark.css" type="text/css">
+    <link rel="stylesheet" href="/stastic/css/font-icons.css" type="text/css">
+    <link rel="stylesheet" href="/stastic/css/animate.css" type="text/css">
+    <link rel="stylesheet" href="/stastic/css/magnific-popup.css" type="text/css">
 
-    <link rel="stylesheet" href="web_files/responsive.css" type="text/css">
-    <link rel="stylesheet" href="lecturerstable.css" type="text/css">
+    <link rel="stylesheet" href="/stastic/css/responsive.css" type="text/css">
+    <link rel="stylesheet" href="/stastic/css/lecturerstable.css" type="text/css">
 
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <!--[if lt IE 9]>
@@ -25,9 +25,9 @@
 
 
     <!--时间表的样式-->
-    <link href="Home_files/conftimetable.css" rel="stylesheet" type="text/css">
+    <link href="/stastic/css/conftimetable.css" rel="stylesheet" type="text/css">
     <!--时间表的动态位置移动-->
-    <link href="Home_files/conftimetable-responsive.css" rel="stylesheet" type="text/css" media="screen">
+    <link href="/stastic/css/conftimetable-responsive.css" rel="stylesheet" type="text/css" media="screen">
 
 
 
@@ -52,9 +52,9 @@
             }
         </style>
     </div>
-    <script async="" src="web_files/analytics.js"></script>
-    <script type="text/javascript" src="web_files/jquery.js"></script>
-    <script type="text/javascript" src="web_files/plugins.js"></script>
+    <script async="" src="/stastic/js/analytics.js"></script>
+    <script type="text/javascript" src="/stastic/js/jquery.js"></script>
+    <script type="text/javascript" src="/stastic/js/plugins.js"></script>
     <link rel="apple-touch-icon" sizes="72x72" href="http://www.kdd.org/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="http://www.kdd.org/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="http://www.kdd.org/favicon-16x16.png">
@@ -82,7 +82,7 @@
                 <!-- Logo
                 ============================================= -->
                 <div style="position: absolute;top:6px">
-                    <img src="images/hdu_ics_logo.png" alt="HDUlogo" style="height: 50px;">
+                    <img src="/stastic/images/web/hdu_ics_logo.png" alt="HDUlogo" style="height: 50px;">
 
                 </div>
                 <!-- #logo end -->
@@ -210,7 +210,7 @@
 
                 <div class="widget clearfix">
 
-                    <img src="images/hdu_ics_logo.png" alt="" class="footer-logo" style="float: left;width: 100%">
+                    <img src="/stastic/images/web/hdu_ics_logo.png" alt="" class="footer-logo" style="float: left;width: 100%">
 
                     <p style="position: relative;top:5px;left:25px">We will always update the meeting time as above.</p>
 
@@ -312,6 +312,6 @@
     <!-- #copyrights end -->
 
 </footer>
-<script type="text/javascript" src="web_files/functions.js"></script>
+<script type="text/javascript" src="/stastic/css/functions.js"></script>
 </body>
 </html>
