--- a/templates/chairs.html
+++ b/templates/chairs.html
@@ -6,14 +6,14 @@
 
     <!-- Stylesheets
     ============================================= -->
-    <link rel="stylesheet" href="./web_files/bootstrap.css" type="text/css">
-    <link rel="stylesheet" href="./web_files/style.css" type="text/css">
-    <link rel="stylesheet" href="./web_files/dark.css" type="text/css">
-    <link rel="stylesheet" href="./web_files/font-icons.css" type="text/css">
-    <link rel="stylesheet" href="./web_files/animate.css" type="text/css">
-    <link rel="stylesheet" href="./web_files/magnific-popup.css" type="text/css">
+    <link rel="stylesheet" href="/stastic/css/bootstrap.css" type="text/css">
+    <link rel="stylesheet" href="/stastic/css/style.css" type="text/css">
+    <link rel="stylesheet" href="/stastic/css/dark.css" type="text/css">
+    <link rel="stylesheet" href="/stastic/css/font-icons.css" type="text/css">
+    <link rel="stylesheet" href="/stastic/css/animate.css" type="text/css">
+    <link rel="stylesheet" href="/stastic/css/magnific-popup.css" type="text/css">
 
-    <link rel="stylesheet" href="./web_files/responsive.css" type="text/css">
+    <link rel="stylesheet" href="/stastic/css/responsive.css" type="text/css">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta charset="utf-8">
     <!--[if lt IE 9]>
@@ -95,7 +95,7 @@
             <!-- Logo
             ============================================= -->
             <div style="position: absolute;top:6px">
-                <img src="images/hdu_ics_logo.png" alt="HDUlogo" style="height: 50px;">
+                <img src="/stastic/images/web/hdu_ics_logo.png" alt="HDUlogo" style="height: 50px;">
 
             </div>
             <!-- #logo end -->
@@ -232,7 +232,7 @@
 
                 <div class="widget clearfix">
 
-                    <img src="images/hdu_ics_logo.png" alt="" class="footer-logo" style="float: left;width: 100%">
+                    <img src="/stastic/images/wbe/hdu_ics_logo.png" alt="" class="footer-logo" style="float: left;width: 100%">
 
                     <p style="position: relative;top:5px;left:25px">We will always update the meeting time as above.</p>
 
@@ -334,5 +334,5 @@
     <!-- #copyrights end -->
 
 </footer>
-<script type="text/javascript" src="web_files/functions.js"></script>
+<script type="text/javascript" src="/stastic/js/functions.js"></script>
 </body>
