--- a/templates/index.html
+++ b/templates/index.html
@@ -6,15 +6,15 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <!-- Stylesheets
     ============================================= -->
-    <link rel="stylesheet" href="web_files/bootstrap.css" type="text/css">
-    <link rel="stylesheet" href="web_files/style.css" type="text/css">
-    <link rel="stylesheet" href="web_files/dark.css" type="text/css">
-    <link rel="stylesheet" href="web_files/font-icons.css" type="text/css">
-    <link rel="stylesheet" href="web_files/animate.css" type="text/css">
-    <link rel="stylesheet" href="web_files/magnific-popup.css" type="text/css">
+    <link rel="stylesheet" href="/stastic/css/bootstrap.css" type="text/css">
+    <link rel="stylesheet" href="/stastic/css/style.css" type="text/css">
+    <link rel="stylesheet" href="/stastic/css/dark.css" type="text/css">
+    <link rel="stylesheet" href="/stastic/css/font-icons.css" type="text/css">
+    <link rel="stylesheet" href="/stastic/css/animate.css" type="text/css">
+    <link rel="stylesheet" href="/stastic/css/magnific-popup.css" type="text/css">
 
-    <link rel="stylesheet" href="web_files/responsive.css" type="text/css">
-    <link rel="stylesheet" href="lecturerstable.css" type="text/css">
+    <link rel="stylesheet" href="/stastic/css/responsive.css" type="text/css">
+    <link rel="stylesheet" href="/stastic/css/lecturerstable.css" type="text/css">
 
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <!--[if lt IE 9]>
@@ -26,9 +26,9 @@
 
 
     <!--时间表的样式-->
-    <link href="Home_files/conftimetable.css" rel="stylesheet" type="text/css">
+    <link href="/stastic/css/conftimetable.css" rel="stylesheet" type="text/css">
     <!--时间表的动态位置移动-->
-    <link href="Home_files/conftimetable-responsive.css" rel="stylesheet" type="text/css" media="screen">
+    <link href="/stastic/css/conftimetable-responsive.css" rel="stylesheet" type="text/css" media="screen">
 
 
 
@@ -53,9 +53,9 @@
             }
         </style>
     </div>
-    <script async="" src="web_files/analytics.js"></script>
-    <script type="text/javascript" src="web_files/jquery.js"></script>
-    <script type="text/javascript" src="web_files/plugins.js"></script>
+    <script async="" src="/stastic/js/analytics.js"></script>
+    <script type="text/javascript" src="/stastic/js/jquery.js"></script>
+    <script type="text/javascript" src="/stastic/js/plugins.js"></script>
     <link rel="apple-touch-icon" sizes="72x72" href="http://www.kdd.org/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="http://www.kdd.org/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="http://www.kdd.org/favicon-16x16.png">
@@ -151,7 +151,7 @@
                     <!-- Logo
                     ============================================= -->
                     <div style="position: absolute;top:6px">
-                        <img src="images/hdu_ics_logo.png" alt="HDUlogo" style="height: 50px;">
+                        <img src="/stastic/images/web/hdu_ics_logo.png" alt="HDUlogo" style="height: 50px;">
 
                     </div>
                     <!-- #logo end -->
@@ -236,7 +236,7 @@
 
             <div class="swiper-container swiper-parent" style="cursor: -webkit-grab;">
                 <div class="swiper-wrapper" style="width: 9115.2px; height: 350px; transform: translate3d(-6076.8px, 0px, 0px); transition-duration: 0.3s;">
-                    <div class="swiper-slide swiper-slide-duplicate" style="background-image: url(images/hdubg_1.jpg); background-position: center top; background-color: rgb(0, 0, 0); width: 1519.2px; height: 350px;">
+                    <div class="swiper-slide swiper-slide-duplicate" style="background-image: url(/stastic/images/web/hdubg_1.jpg); background-position: center top; background-color: rgb(0, 0, 0); width: 1519.2px; height: 350px;">
                         <div class="container clearfix">
                             <div class="slider-caption" style="transform: translate(0px, -55.86px); opacity: 4.00589; top: 32px;">
                                 <h2 data-caption-animate="fadeInUp" style="color: #f0f0f0; margin-top: 10%; text-shadow: 1px 1px 2px black;" class="not-animated">HDU conference</h2>
@@ -254,7 +254,7 @@
                     </div>
 
 
-                    <div class="swiper-slide" style="background-image: url(images/hdubg_2.jpg); background-position: center center; background-color: rgb(0, 0, 0); width: 1519.2px; height: 350px;">
+                    <div class="swiper-slide" style="background-image: url(/stastic/images/web/hdubg_2.jpg); background-position: center center; background-color: rgb(0, 0, 0); width: 1519.2px; height: 350px;">
                         <div class="container clearfix">
                             <div class="slider-caption" style="transform: translate(0px, -55.86px); opacity: 4.00589; top: 20.5px;">
                                 <h2 data-caption-animate="fadeInUp" style="color: #f0f0f0; margin-top: 10%; text-shadow: 1px 1px 2px black;" class="not-animated">Internet of Things Security @HDU 2018</h2>
@@ -279,10 +279,10 @@
 
 
                 <div id="slider-arrow-left" style="opacity: 4.00589;">
-                    <img src="images/left_arrow.png" alt="">
+                    <img src="/stastic/images/web/left_arrow.png" alt="">
                 </div>
                 <div id="slider-arrow-right" style="opacity: 4.00589;">
-                    <img src="images/right_arrow.png" alt="">
+                    <img src="/stastic/images/web/right_arrow.png" alt="">
                 </div>
 
             </div>
@@ -359,33 +359,7 @@
                     $('#slide-number-total').html(swiperSlider.slides.length - 2);
                 });
             </script>
-
-
         </section>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
         <!-- Content
         ============================================= -->
         <section id="content">
@@ -398,7 +372,7 @@
                                 <h2>ZeFei Zhu (朱泽飞)</h2>
                             </div>
                             <div class="images"><a href="figurezhuzefei.html">
-                                <img src="images/zhuzefei.jpg" alt="" width="auto", height="240px"></a>
+                                <img src="/stastic/images/human/zhuzefei.jpg" alt="" width="auto", height="240px"></a>
                             </div>
                         </div>
                     </div>
@@ -408,7 +382,7 @@
                                 <h2>Ting Wu (吴铤)</h2>
                             </div>
                             <div class="images"><a href="figure.html">
-                                <img src="images/haipa.jpg" alt="" width="auto" height="240px"></a>
+                                <img src="/stastic/images/human/haipa.jpg" alt="" width="auto" height="240px"></a>
                             </div>
                         </div>
                     </div>
@@ -454,25 +428,17 @@
             </div>
     </div>
     </section>
-
-
-
-
     <!--会议时间图表-->
     <div class="conftimetable" id="faqs_part">
             <div class="container">
-
                 <a href="conference.html"><h2 class="section-title">HDU Conference Time Table</h2></a>
                 <h4>We will always update the meeting time as above.</h4>
-
-
                 <div class="faqbox">
                     <div class="title">Machine Learning Discussion</div>
                     <p>
                         <strong>Time</strong>: April 31 09:00am / <strong>location</strong>: Hangzhou Science and Technology Museum / <strong>chair</strong>: ZeFei Zhu
                     </p>
                 </div>
-
                 <div class="faqbox longer">
                     <div class="title">Machine Learning Discussion</div>
                     <p>
@@ -506,43 +472,6 @@
 
             </div>
         </div>
-
-
-
-
-
-
-    <!--<div class="lecturers">-->
-        <!--<div class="lecturersheader">-->
-            <!--<h3>Our conference will be taught by the best teacher</h3>-->
-        <!--</div>-->
-
-        <!--<section class="lecturerspic">-->
-            <!--<div class="information">-->
-                    <!--<div class="title">-->
-                        <!--<h2>WuTing(吴铤)</h2>-->
-                        <!--<p>Director of Secrecy College</p>-->
-                    <!--</div>-->
-                    <!--<div class="images">-->
-                        <!--<img src="images/haipa.jpg" alt="" >-->
-                    <!--</div>-->
-            <!--</div>-->
-            <!--<div class="word">-->
-                <!--<p>-->
-                    <!--Wu Jun, Professor, born in 1972, graduated from the Department of Mathematics, Zhejiang University in 1999, received a master's degree in science. He graduated from the School of Mathematics and Systems Science, Shandong University in 2002 with a Ph.D. in Science. The research direction is information security, cryptography theory and application. In teaching, she took on the teaching of discrete mathematics, computer security and confidentiality, computer graphics, and digital image processing. In scientific research, as a major participant, he participated in the research of the National 863 Program, the National Natural Science Foundation of China, the Weaponry and Equipment Pre-research Fund Project, and the Zhejiang Provincial Natural Science Fund Project. At present, he undertakes research on many topics such as the Zhejiang Provincial Natural Science Foundation Project and the Zhejiang Provincial Department of Education’s University Research Project. Has published more than twenty papers in domestic and foreign magazines such as computer research and development, communications journals, etc.-->
-                <!--</p>-->
-            <!--</div>-->
-
-        <!--</section>-->
-
-    <!--</div>-->
-
-
-
-
-
-
-
         <section id="lecturers">
             <div class="container">
                 <div class="row">
@@ -606,7 +535,7 @@
 
                     <div class="widget clearfix">
 
-                        <img src="images/hdu_ics_logo.png" alt="" class="footer-logo" style="float: left;width: 100%">
+                        <img src="/stastic/images/web/hdu_ics_logo.png" alt="" class="footer-logo" style="float: left;width: 100%">
 
                         <p style="position: relative;top:5px;left:25px">We will always update the meeting time as above.</p>
 
@@ -670,17 +599,6 @@
 
         <!-- .footer-widgets-wrap end -->
 
-
-
-
-
-
-
-
-
-
-
-
         <!-- Copyrights
             ============================================= -->
         <div id="copyrights">
@@ -708,7 +626,7 @@
         <!-- #copyrights end -->
 
     </footer>
-    <script type="text/javascript" src="web_files/functions.js"></script>
+    <script type="text/javascript" src="/stastic/js/functions.js"></script>
 
 
 </body>
