--- a/templates/chairs.html
+++ b/templates/chairs.html
@@ -6,25 +6,18 @@
 
     <!-- Stylesheets
     ============================================= -->
-    <link rel="stylesheet" href="/stastic/css/bootstrap.css" type="text/css">
-    <link rel="stylesheet" href="/stastic/css/style.css" type="text/css">
-    <link rel="stylesheet" href="/stastic/css/dark.css" type="text/css">
-    <link rel="stylesheet" href="/stastic/css/font-icons.css" type="text/css">
-    <link rel="stylesheet" href="/stastic/css/animate.css" type="text/css">
-    <link rel="stylesheet" href="/stastic/css/magnific-popup.css" type="text/css">
-
-    <link rel="stylesheet" href="/stastic/css/responsive.css" type="text/css">
+    <link rel="stylesheet" href="/static/css/bootstrap.css" type="text/css">
+    <link rel="stylesheet" href="/static/css/style.css" type="text/css">
+    <link rel="stylesheet" href="/static/css/dark.css" type="text/css">
+    <link rel="stylesheet" href="/static/css/font-icons.css" type="text/css">
+    <link rel="stylesheet" href="/static/css/animate.css" type="text/css">
+    <link rel="stylesheet" href="/static/css/magnific-popup.css" type="text/css">
+    <link rel="stylesheet" href="/static/css/responsive.css" type="text/css">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta charset="utf-8">
     <!--[if lt IE 9]>
     <script src="http://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"></script>
     <![endif]-->
-
-
-
-
-
-
     <style>
         .figure-border1{
             border-style:solid;
@@ -82,93 +75,46 @@
 </head>
 
 <body class="stretched vsc-initialized device-lg">
-
-
-
 <header id="header" class="full-header full-header-dark noleftborder norightborder sticky-header">
-
     <div id="header-wrap">
-
         <div class="container clearfix" style="background: #000;">
-
-
             <!-- Logo
             ============================================= -->
             <div style="position: absolute;top:6px">
-                <img src="/stastic/images/web/hdu_ics_logo.png" alt="HDUlogo" style="height: 50px;">
-
+                <img src="/static/images/web/hdu_ics_logo.png" alt="HDUlogo" style="height: 50px;">
             </div>
             <!-- #logo end -->
-
-
-
-
-
-
-
-
-
-
             <!-- Primary Navigation
             ============================================= -->
             <nav class="primary-menu">
-
                 <ul class="down-menu nav-menu" style="touch-action: pan-y;">
-
                     <li>
                         <a href="index.html">
                             <div>Home</div>
                         </a>
                     </li>
-
                     <li class="sub-menu">
                         <a href="conference.html" class="sf-with-ul">
                             <div>conferences</div>
                         </a>
-
                     </li>
-
-
-
                     <li class="sub-menu">
                         <a href="chairs.html" class="sf-with-ul">
                             <div>Chairs</div>
                         </a>
-
                     </li>
-
-
                     <li class="sub-menu" >
                         <a href="about.html" class="sf-with-ul">
                             <div>About Us</div>
                         </a>
-
-
                     </li>
-
-
-
                 </ul>
-
-
-
                 <!-- #top-search end -->
-
             </nav>
             <!-- #primary-menu end -->
-
         </div>
-
     </div>
-
 </header>
-
-
-
-
-
-
-
 <section id="Chairs">
     <div class="container">
         <div class="row">
@@ -209,9 +155,6 @@
                         </h4>
                     </div>
                 </div>
-
-
-
             </div>
         </div>
     </div>
@@ -221,118 +164,63 @@
 <!-- Footer
     ============================================= -->
 <footer id="footer" class="dark">
-
     <div class="container">
-
         <!-- Footer Widgets
             ============================================= -->
         <div class="footer-widgets-wrap clearfix">
-
             <div class="col_one_third">
-
                 <div class="widget clearfix">
-
-                    <img src="/stastic/images/wbe/hdu_ics_logo.png" alt="" class="footer-logo" style="float: left;width: 100%">
-
+                    <img src="/static/images/wbe/hdu_ics_logo.png" alt="" class="footer-logo" style="float: left;width: 100%">
                     <p style="position: relative;top:5px;left:25px">We will always update the meeting time as above.</p>
-
-
-
-
                 </div>
-
-
             </div>
             <nav class="primary-menu">
-
                 <ul class="down-menu nav-menu" style="touch-action: pan-y;">
-
                     <li>
                         <a href="index.html">
                             <div>Home</div>
                         </a>
                     </li>
-
                     <li class="sub-menu">
                         <a href="conference.html" class="sf-with-ul">
                             <div>conferences</div>
                         </a>
-
                     </li>
-
-
-
                     <li class="sub-menu">
                         <a href="chairs.html" class="sf-with-ul">
                             <div>Chairs</div>
                         </a>
-
                     </li>
-
-
                     <li class="sub-menu" >
                         <a href="about.html" class="sf-with-ul">
                             <div>About Us</div>
                         </a>
-
-
                     </li>
-
-
-
                 </ul>
-
-
-
                 <!-- #top-search end -->
-
             </nav>
-
-
-
         </div>
-
     </div>
-
     <!-- .footer-widgets-wrap end -->
-
-
-
-
-
-
-
-
-
-
-
-
     <!-- Copyrights
         ============================================= -->
     <div id="copyrights">
-
         <div class="container clearfix">
-
             <div class="col_half">
                 Copyrights © 2018 All Rights Reserved - HDU
                 <!--<br>-->
                 <!--<a href="http://www.acm.org/sigs/volunteer_resources/officers_manual/code%20of%20conduct">ACM Code of Conduct</a>-->
-
             </div>
-
             <!--<div class="col_half col_last tright">-->
             <!--<div class="fright clearfix">-->
 
             <!--</div>-->
 
             <!--<div class="clear"></div>-->
-
-
         </div>
-
-    </div></div>
+    </div>
+    </div>
     <!-- #copyrights end -->
-
 </footer>
-<script type="text/javascript" src="/stastic/js/functions.js"></script>
+<script type="text/javascript" src="/static/js/functions.js"></script>
 </body>
