--- a/templates/index.html
+++ b/templates/index.html
@@ -6,15 +6,15 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <!-- Stylesheets
     ============================================= -->
-    <link rel="stylesheet" href="/stastic/css/bootstrap.css" type="text/css">
-    <link rel="stylesheet" href="/stastic/css/style.css" type="text/css">
-    <link rel="stylesheet" href="/stastic/css/dark.css" type="text/css">
-    <link rel="stylesheet" href="/stastic/css/font-icons.css" type="text/css">
-    <link rel="stylesheet" href="/stastic/css/animate.css" type="text/css">
-    <link rel="stylesheet" href="/stastic/css/magnific-popup.css" type="text/css">
+    <link rel="stylesheet" href="/static/css/bootstrap.css" type="text/css">
+    <link rel="stylesheet" href="/static/css/style.css" type="text/css">
+    <link rel="stylesheet" href="/static/css/dark.css" type="text/css">
+    <link rel="stylesheet" href="/static/css/font-icons.css" type="text/css">
+    <link rel="stylesheet" href="/static/css/animate.css" type="text/css">
+    <link rel="stylesheet" href="/static/css/magnific-popup.css" type="text/css">
 
-    <link rel="stylesheet" href="/stastic/css/responsive.css" type="text/css">
-    <link rel="stylesheet" href="/stastic/css/lecturerstable.css" type="text/css">
+    <link rel="stylesheet" href="/static/css/responsive.css" type="text/css">
+    <link rel="stylesheet" href="/static/css/lecturerstable.css" type="text/css">
 
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <!--[if lt IE 9]>
@@ -26,9 +26,9 @@
 
 
     <!--时间表的样式-->
-    <link href="/stastic/css/conftimetable.css" rel="stylesheet" type="text/css">
+    <link href="/static/css/conftimetable.css" rel="stylesheet" type="text/css">
     <!--时间表的动态位置移动-->
-    <link href="/stastic/css/conftimetable-responsive.css" rel="stylesheet" type="text/css" media="screen">
+    <link href="/static/css/conftimetable-responsive.css" rel="stylesheet" type="text/css" media="screen">
 
 
 
@@ -53,9 +53,9 @@
             }
         </style>
     </div>
-    <script async="" src="/stastic/js/analytics.js"></script>
-    <script type="text/javascript" src="/stastic/js/jquery.js"></script>
-    <script type="text/javascript" src="/stastic/js/plugins.js"></script>
+    <script async="" src="/static/js/analytics.js"></script>
+    <script type="text/javascript" src="/static/js/jquery.js"></script>
+    <script type="text/javascript" src="/static/js/plugins.js"></script>
     <link rel="apple-touch-icon" sizes="72x72" href="http://www.kdd.org/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="http://www.kdd.org/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="http://www.kdd.org/favicon-16x16.png">
@@ -134,115 +134,66 @@
 </head>
 
 <body class="stretched vsc-initialized device-lg">
-
     <!-- Document Wrapper
     ============================================= -->
     <section id="wrapper" class="clearfix" style="animation-duration: 1.5s; opacity: 1;">
-
         <!-- Header
         ============================================= -->
         <header id="header" class="full-header full-header-dark noleftborder norightborder sticky-header">
-
             <div id="header-wrap">
-
                 <div class="container clearfix" style="background: #000;">
-
-
                     <!-- Logo
                     ============================================= -->
                     <div style="position: absolute;top:6px">
-                        <img src="/stastic/images/web/hdu_ics_logo.png" alt="HDUlogo" style="height: 50px;">
-
+                        <img src="/static/images/web/hdu_ics_logo.png" alt="HDUlogo" style="height: 50px;">
                     </div>
                     <!-- #logo end -->
-
-
-
-
-
-
-
-
-
-
                     <!-- Primary Navigation
                     ============================================= -->
                     <nav class="primary-menu">
-
                         <ul class="down-menu nav-menu" style="touch-action: pan-y;">
-
                             <li>
                                 <a href="index.html">
                                     <div>Home</div>
                                 </a>
                             </li>
-
                             <li class="sub-menu">
                                 <a href="conference.html" class="sf-with-ul">
                                     <div>conferences</div>
                                 </a>
-
                             </li>
-
-
-
                             <li class="sub-menu">
                                 <a href="chairs.html" class="sf-with-ul">
                                     <div>Chairs</div>
                                 </a>
-
                             </li>
-
-
                             <li class="sub-menu" >
                                 <a href="about.html" class="sf-with-ul">
                                     <div>About Us</div>
                                 </a>
-
-
                             </li>
-
-
-
+                            <li class="sub-menu">
+                                <a href="team.html" class="sf-with-ul">
+                                    <div>GROUP</div>
+                                </a>
+                            </li>
                         </ul>
-
-
-
                         <!-- #top-search end -->
-
                     </nav>
                     <!-- #primary-menu end -->
-
                 </div>
-
             </div>
-
         </header>
-
-
-
-
-
-
-
-
-
-
-
-
         <!-- #header end -->
-
         <section id="slider" class="slider-parallax swiper_wrapper clearfix" style="transform: translate(0px, 260.67px);">
-
             <div class="swiper-container swiper-parent" style="cursor: -webkit-grab;">
                 <div class="swiper-wrapper" style="width: 9115.2px; height: 350px; transform: translate3d(-6076.8px, 0px, 0px); transition-duration: 0.3s;">
-                    <div class="swiper-slide swiper-slide-duplicate" style="background-image: url(/stastic/images/web/hdubg_1.jpg); background-position: center top; background-color: rgb(0, 0, 0); width: 1519.2px; height: 350px;">
+                    <div class="swiper-slide swiper-slide-duplicate" style="background-image: url(/static/images/web/hdubg_1.jpg); background-position: center top; background-color: rgb(0, 0, 0); width: 1519.2px; height: 350px;">
                         <div class="container clearfix">
                             <div class="slider-caption" style="transform: translate(0px, -55.86px); opacity: 4.00589; top: 32px;">
                                 <h2 data-caption-animate="fadeInUp" style="color: #f0f0f0; margin-top: 10%; text-shadow: 1px 1px 2px black;" class="not-animated">HDU conference</h2>
                                 <p data-caption-animate="fadeInUp" data-caption-delay="200" class="not-animated">
                                     <span style="color: #fff; font-size: 36px; text-shadow: 1px 1px 2px black;">Conference Service Platform 2018</span>
-
                                 </p>
                                 <!--&lt;!&ndash;小按钮&ndash;&gt;-->
                                 <!--<p data-caption-animate="fadeInUp" data-caption-delay="400" class="not-animated">-->
@@ -252,9 +203,7 @@
                             </div>
                         </div>
                     </div>
-
-
-                    <div class="swiper-slide" style="background-image: url(/stastic/images/web/hdubg_2.jpg); background-position: center center; background-color: rgb(0, 0, 0); width: 1519.2px; height: 350px;">
+                    <div class="swiper-slide" style="background-image: url(/static/images/web/hdubg_2.jpg); background-position: center center; background-color: rgb(0, 0, 0); width: 1519.2px; height: 350px;">
                         <div class="container clearfix">
                             <div class="slider-caption" style="transform: translate(0px, -55.86px); opacity: 4.00589; top: 20.5px;">
                                 <h2 data-caption-animate="fadeInUp" style="color: #f0f0f0; margin-top: 10%; text-shadow: 1px 1px 2px black;" class="not-animated">Internet of Things Security @HDU 2018</h2>
@@ -263,30 +212,22 @@
                                     <br>
                                     <span style="color: #fff; font-size: 24px; text-shadow: 1px 1px 1px black;">Details Coming Soon</span>
                                 </p>
-
                                 <!--&lt;!&ndash;小按钮&ndash;&gt;-->
                                 <!--<p data-caption-animate="fadeInUp" data-caption-delay="400" class="not-animated">-->
                                     <!--<a class="button button-small button-green button-rounded" href="http://www.kdd.org/kdd2018"-->
                                         <!--}="">Learn More</a>-->
                                 <!--</p>-->
-
                             </div>
                         </div>
                     </div>
-
-
                 </div>
-
-
                 <div id="slider-arrow-left" style="opacity: 4.00589;">
-                    <img src="/stastic/images/web/left_arrow.png" alt="">
+                    <img src="/static/images/web/left_arrow.png" alt="">
                 </div>
                 <div id="slider-arrow-right" style="opacity: 4.00589;">
-                    <img src="/stastic/images/web/right_arrow.png" alt="">
+                    <img src="/static/images/web/right_arrow.png" alt="">
                 </div>
-
             </div>
-
             <script>
                 jQuery(document).ready(function ($) {
                     var swiperSlider = new Swiper('.swiper-parent', {
@@ -372,7 +313,7 @@
                                 <h2>ZeFei Zhu (朱泽飞)</h2>
                             </div>
                             <div class="images"><a href="figurezhuzefei.html">
-                                <img src="/stastic/images/human/zhuzefei.jpg" alt="" width="auto", height="240px"></a>
+                                <img src="/static/images/human/zhuzefei.jpg" alt="" width="auto", height="240px"></a>
                             </div>
                         </div>
                     </div>
@@ -382,7 +323,7 @@
                                 <h2>Ting Wu (吴铤)</h2>
                             </div>
                             <div class="images"><a href="figure.html">
-                                <img src="/stastic/images/human/haipa.jpg" alt="" width="auto" height="240px"></a>
+                                <img src="/static/images/human/haipa.jpg" alt="" width="auto" height="240px"></a>
                             </div>
                         </div>
                     </div>
@@ -535,7 +476,7 @@
 
                     <div class="widget clearfix">
 
-                        <img src="/stastic/images/web/hdu_ics_logo.png" alt="" class="footer-logo" style="float: left;width: 100%">
+                        <img src="/static/images/web/hdu_ics_logo.png" alt="" class="footer-logo" style="float: left;width: 100%">
 
                         <p style="position: relative;top:5px;left:25px">We will always update the meeting time as above.</p>
 
@@ -626,7 +567,7 @@
         <!-- #copyrights end -->
 
     </footer>
-    <script type="text/javascript" src="/stastic/js/functions.js"></script>
+    <script type="text/javascript" src="/static/js/functions.js"></script>
 
 
 </body>
