--- a/templates/about.html
+++ b/templates/about.html
@@ -9,14 +9,14 @@
 
     <!-- Stylesheets
     ============================================= -->
-    <link rel="stylesheet" href="/stastic/css/bootstrap.css" type="text/css">
-    <link rel="stylesheet" href="/stastic/css/style.css" type="text/css">
-    <link rel="stylesheet" href="/stastic/css/dark.css" type="text/css">
-    <link rel="stylesheet" href="/stastic/css/font-icons.css" type="text/css">
-    <link rel="stylesheet" href="/stastic/css/animate.css" type="text/css">
-    <link rel="stylesheet" href="/stastic/css/magnific-popup.css" type="text/css">
+    <link rel="stylesheet" href="/static/css/bootstrap.css" type="text/css">
+    <link rel="stylesheet" href="/static/css/style.css" type="text/css">
+    <link rel="stylesheet" href="/static/css/dark.css" type="text/css">
+    <link rel="stylesheet" href="/static/css/font-icons.css" type="text/css">
+    <link rel="stylesheet" href="/static/css/animate.css" type="text/css">
+    <link rel="stylesheet" href="/static/css/magnific-popup.css" type="text/css">
 
-    <link rel="stylesheet" href="/stastic/css/responsive.css" type="text/css">
+    <link rel="stylesheet" href="/static/css/responsive.css" type="text/css">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <!--[if lt IE 9]>
     <script src="http://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"></script>
@@ -42,9 +42,9 @@
             }
         </style>
     </div>
-    <script async="" src="/stastic/js/analytics.js"></script>
-    <script type="text/javascript" src="/stastic/js/jquery.js"></script>
-    <script type="text/javascript" src="/stastic/js/plugins.js"></script>
+    <script async="" src="/static/js/analytics.js"></script>
+    <script type="text/javascript" src="/static/js/jquery.js"></script>
+    <script type="text/javascript" src="/static/js/plugins.js"></script>
     <link rel="apple-touch-icon" sizes="72x72" href="http://www.kdd.org/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="http://www.kdd.org/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="http://www.kdd.org/favicon-16x16.png">
@@ -133,7 +133,7 @@
             <!-- Logo
             ============================================= -->
             <div style="position: absolute;top:6px">
-                <img src="/stastic/images/web/hdu_ics_logo.png" alt="HDUlogo" style="height: 60px;">
+                <img src="/static/images/web/hdu_ics_logo.png" alt="HDUlogo" style="height: 60px;">
 
             </div>
             <!-- #logo end -->
@@ -287,7 +287,7 @@
 
                 <div class="widget clearfix">
 
-                    <img src="/stastic/images/web/hdu_ics_logo.png" alt="" class="footer-logo" style="float: left;width: 100%">
+                    <img src="/static/images/web/hdu_ics_logo.png" alt="" class="footer-logo" style="float: left;width: 100%">
 
                     <p style="position: relative;top:5px;left:25px">We will always update the meeting time as above.</p>
 
@@ -389,7 +389,7 @@
     <!-- #copyrights end -->
 
 </footer>
-<script type="text/javascript" src="/stastic/js/functions.js"></script>
+<script type="text/javascript" src="/static/js/functions.js"></script>
 
 
 
