--- a/templates/figure.html
+++ b/templates/figure.html
@@ -6,15 +6,15 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <!-- Stylesheets
     ============================================= -->
-    <link rel="stylesheet" href="/stastic/css/bootstrap.css" type="text/css">
-    <link rel="stylesheet" href="/stastic/css/style.css" type="text/css">
-    <link rel="stylesheet" href="/stastic/css/dark.css" type="text/css">
-    <link rel="stylesheet" href="/stastic/css/font-icons.css" type="text/css">
-    <link rel="stylesheet" href="/stastic/css/animate.css" type="text/css">
-    <link rel="stylesheet" href="/stastic/css/magnific-popup.css" type="text/css">
+    <link rel="stylesheet" href="/static/css/bootstrap.css" type="text/css">
+    <link rel="stylesheet" href="/static/css/style.css" type="text/css">
+    <link rel="stylesheet" href="/static/css/dark.css" type="text/css">
+    <link rel="stylesheet" href="/static/css/font-icons.css" type="text/css">
+    <link rel="stylesheet" href="/static/css/animate.css" type="text/css">
+    <link rel="stylesheet" href="/static/css/magnific-popup.css" type="text/css">
 
-    <link rel="stylesheet" href="/stastic/css/responsive.css" type="text/css">
-    <link rel="stylesheet" href="/stastic/css/lecturerstable.css" type="text/css">
+    <link rel="stylesheet" href="/static/css/responsive.css" type="text/css">
+    <link rel="stylesheet" href="/static/css/lecturerstable.css" type="text/css">
 
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <!--[if lt IE 9]>
@@ -26,9 +26,9 @@
 
 
     <!--时间表的样式-->
-    <link href="/stastic/css/conftimetable.css" rel="stylesheet" type="text/css">
+    <link href="/static/css/conftimetable.css" rel="stylesheet" type="text/css">
     <!--时间表的动态位置移动-->
-    <link href="/stastic/css/conftimetable-responsive.css" rel="stylesheet" type="text/css" media="screen">
+    <link href="/static/css/conftimetable-responsive.css" rel="stylesheet" type="text/css" media="screen">
 
 
 
@@ -53,9 +53,9 @@
             }
         </style>
     </div>
-    <script async="" src="/stastic/js/analytics.js"></script>
-    <script type="text/javascript" src="/stastic/js/jquery.js"></script>
-    <script type="text/javascript" src="/stastic/js/plugins.js"></script>
+    <script async="" src="/static/js/analytics.js"></script>
+    <script type="text/javascript" src="/static/js/jquery.js"></script>
+    <script type="text/javascript" src="/static/js/plugins.js"></script>
     <link rel="apple-touch-icon" sizes="72x72" href="http://www.kdd.org/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="http://www.kdd.org/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="http://www.kdd.org/favicon-16x16.png">
@@ -150,7 +150,7 @@
                 <!-- Logo
                 ============================================= -->
                 <div style="position: absolute;top:6px">
-                    <img src="/stastic/images/web/hdu_ics_logo.png" alt="HDUlogo" style="height: 50px;">
+                    <img src="/static/images/web/hdu_ics_logo.png" alt="HDUlogo" style="height: 50px;">
 
                 </div>
                 <!-- #logo end -->
@@ -227,7 +227,7 @@
             <br>
             <br>
             <div class="grid-item grid-item-sm-3">
-                <img src="/stastic/images/human/haipa.jpg" alt="" class="img-responsive center-block">
+                <img src="/static/images/human/haipa.jpg" alt="" class="img-responsive center-block">
             </div>
             <div class="col-md-9">
                 <h3>Ting Wu（吴铤）</h3>
@@ -250,7 +250,7 @@
 
                 <div class="widget clearfix">
 
-                    <img src="/stastic/images/web/hdu_ics_logo.png" alt="" class="footer-logo" style="float: left;width: 100%">
+                    <img src="/static/images/web/hdu_ics_logo.png" alt="" class="footer-logo" style="float: left;width: 100%">
 
                     <p style="position: relative;top:5px;left:25px">We will always update the meeting time as above.</p>
                 </div>
@@ -348,6 +348,6 @@
     <!-- #copyrights end -->
 
 </footer>
-<script type="text/javascript" src="/stastic/js/functions.js"></script>
+<script type="text/javascript" src="/static/js/functions.js"></script>
 
 </body>
